PART 1 Final/group7stack.yml

Resources:
  AppNode:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-08692d171e3cf02d6
      KeyName: aws-group7project
      SecurityGroups:
        - !Ref AppNodeSG
      UserData: !Base64 |
        #!/bin/bash
        sudo apt-get update
        sudo apt-get install -y apt-transport-https ca-certificates
        sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
        sudo echo "deb https://apt.dockerproject.org/repo ubuntu-xenial main" | tee /etc/apt/sources.list.d/docker.list
        sudo apt-get update
        sudo apt-get purge lxc-docker || true
        sudo apt-get -y install linux-image-extra-$(uname -r) linux-image-extra-virtual
        sudo apt-get -y install docker-engine
        sudo usermod -aG docker ubuntu
        sudo mkdir -p /etc/systemd/system/docker.service.d
        sudo printf "[Service]\nExecStart=\nExecStart=/usr/bin/dockerd -H fd:// -H tcp://0.0.0.0:2375\n" >>  /etc/systemd/system/docker.service.d/docker.conf
        sudo systemctl daemon-reload
        sudo systemctl restart docker
  AppNodeSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: for the app nodes that allow ssh, http and docker ports
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '2375'
        ToPort: '2375'
        CidrIp: 0.0.0.0/0
  DatabaseInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBName: "blog"
      Engine: MySQL
      MasterUsername: bloguser
      MasterUserPassword: password123
      DBInstanceClass: db.t2.micro
      AllocatedStorage: '5'
      DBSecurityGroups:
        - !Ref DatabaseSG
  DatabaseSG:
    Type: AWS::RDS::DBSecurityGroup
    Properties:
      GroupDescription: Security Group for RDS public access
      DBSecurityGroupIngress:
        - CIDRIP: 0.0.0.0/0

#Bonus part 1 3 additional aws resources.
#ElastiCache:
#Type: 'AWS::ElastiCache::CacheCluster'
    #Properties: {}
   # Metadata:
      #'AWS::CloudFormation::Designer':
        #id: cee600f6-bdfd-4b46-a985-fb6ad2aeb702
    #DependsOn:
     # - ECSG4HM92
  #ECSG4HM92:
   # Type: 'AWS::ElastiCache::SecurityGroup'
    #Properties: {}
    #Type: 'AWS::ElasticLoadBalancing::LoadBalancer'
    #Properties: {}
    #Metadata:
    #DependsOn:
      #- AppNodeSG
  #CUP1TVS3:
   # Type: 'AWS::Cognito::UserPool'
   # Properties: {}

   # DependsOn:
     # - AppNodeSG#
